src/scss/components/_header.scss
// Component: header
//
// Description: Component styles for header
//

// Variables
//

// Properties
//

.it-header-wrapper,
.it-header-slim-wrapper,
.it-header-center-wrapper,
.it-header-navbar-wrapper {
  --#{$prefix}header-brand-color: var(--#{$prefix}color-text-inverse); // Controls the brand color for the header, using color tokens.
  --#{$prefix}header-brand-icon-color: var(--#{$prefix}icon-inverse); // Controls the brand icon color for the header, using icon tokens.
  --#{$prefix}header-brand-size: 2.5rem; // Controls the header brand size.
  --#{$prefix}header-brand-spacing: var(--it-spacing-14x); // Controls the brand spacing for the header, using spacing tokens.  
  --#{$prefix}header-brand-tagline-size: var(--#{$prefix}body-font-size); // Controls the brand tagline size for the header, using font tokens
  --#{$prefix}header-brand-title-size: var(--#{$prefix}heading-5-font-size); // Controls the brand title size for the header, using font tokens.
  --#{$prefix}header-center-background: var(--#{$prefix}color-background-primary); // Controls the center background for the header, using color tokens.
  --#{$prefix}header-center-font-size: var(--#{$prefix}label-font-size-s); // Controls the center font size for the header, using font tokens.
  --#{$prefix}header-center-height: 4.5rem; // Controls the header center height.
  --#{$prefix}header-center-text-color: var(--#{$prefix}color-text-inverse); // Controls the center text color for the header, using color tokens
  --#{$prefix}header-nav-background: var(--#{$prefix}color-background-primary); // Controls the nav background for the header, using color tokens
  --#{$prefix}header-nav-secondary-font-size: var(--#{$prefix}label-font-size); // Controls the nav secondary font size for the header, using font tokens
  --#{$prefix}header-nav-text-color: var(--#{$prefix}color-link); // Controls the nav text color for the header, using color tokens
  --#{$prefix}header-search-button-background: var(--#{$prefix}color-background-inverse); // Controls the search button background for the header, using color tokens.
  --#{$prefix}header-search-button-color: var(--#{$prefix}icon-inverse); // Controls the search button color for the header, using icon tokens.
  --#{$prefix}header-search-button-size: 3rem; // Controls the header search button size.
  --#{$prefix}header-search-icon-color: var(--#{$prefix}icon-inverse); // Controls the search icon color for the header, using icon tokens.
  --#{$prefix}header-search-icon-size: 1.5rem; // Controls the header search icon size.
  --#{$prefix}header-slim-background: var(--it-color-blue-30); // Controls the header slim background, using color tokens.
  --#{$prefix}header-slim-border-color: hsla(0, 0%, 100%, 0.2); // Controls the header slim border color.
  --#{$prefix}header-slim-font-size: var(--#{$prefix}label-font-size-s); // Controls the slim font size for the header, using font tokens.
  --#{$prefix}header-slim-height: 3rem; // Controls the header slim height.
  --#{$prefix}header-slim-text-color: var(--#{$prefix}color-text-inverse); // Controls the slim text color for the header, using color tokens.
  --#{$prefix}header-social-color: var(--#{$prefix}icon-inverse); // Controls the social color for the header, using icon tokens.
  --#{$prefix}header-spacing-inset: var(--#{$prefix}spacing-xxs); // Controls the inset spacing for the header, using spacing tokens.
  @include media-breakpoint-up(md) {
    --#{$prefix}header-brand-size: 3.5rem;
    --#{$prefix}header-search-icon-color: var(--#{$prefix}icon-primary);
  }
  @include media-breakpoint-up(lg) {
    --#{$prefix}header-brand-size: 4.5rem;
    --#{$prefix}header-brand-title-size: var(--#{$prefix}heading-3-font-size);
    --#{$prefix}header-center-height: 7.5rem; 
    --#{$prefix}header-nav-text-color: var(--#{$prefix}color-text-inverse); 
  }
}

// Styles
//

// Light theme
.it-header-slim-wrapper.theme-light,
.it-header-center-wrapper.theme-light,
.it-header-navbar-wrapper.theme-light,
.it-header-navbar-wrapper.theme-light-desk {
  --#{$prefix}header-brand-color: var(--#{$prefix}color-text-primary);
  --#{$prefix}header-brand-icon-color: var(--#{$prefix}icon-primary);
  --#{$prefix}header-center-background: var(--#{$prefix}color-background-inverse);
  --#{$prefix}header-center-text-color: var(--#{$prefix}color-link);
  --#{$prefix}header-nav-background: var(--#{$prefix}color-background-inverse);
  --#{$prefix}header-nav-text-color: var(--#{$prefix}color-link);
  --#{$prefix}header-search-button-background: var(--#{$prefix}color-background-primary);
  --#{$prefix}header-search-icon-color: var(--#{$prefix}icon-primary);
  --#{$prefix}header-slim-background: var(--#{$prefix}color-background-inverse);
  --#{$prefix}header-slim-border-color: hsla(210, 100%, 40%, 0.2);
  --#{$prefix}header-slim-text-color: var(--#{$prefix}color-link);
  --#{$prefix}header-social-color: var(--#{$prefix}icon-primary);
  @include media-breakpoint-up(md) {
    --#{$prefix}header-search-icon-color: var(--#{$prefix}icon-inverse);
  }
}

.it-header-wrapper {
  position: relative;
  z-index: 5;

  &.it-header-sticky.is-sticky {
    width: 100%;

    .it-nav-wrapper {
      top: 0;
      z-index: 10;
      width: 100%;
    }

    .it-header-slim-wrapper {
      display: none;
    }

    @include media-breakpoint-up(lg) {
      .it-header-slim-wrapper,
      .it-header-center-wrapper {
        display: none;
      }

      .it-header-navbar-wrapper {
        top: 0;
        width: 100%;

        .menu-wrapper {
          display: flex;
          flex-direction: row;
          align-items: center;
          justify-content: flex-start;

          .it-brand-wrapper {
            align-self: center;

            &.cloned-element {
              .it-brand-text {
                display: none;
              }

              a {
                color: var(--#{$prefix}header-brand-color);
                &:hover {
                  text-decoration: none;
                }

                .icon {
                  flex-shrink: 0;
                  width: var(--#{$prefix}header-brand-size);
                  height: var(--#{$prefix}header-brand-size);
                  margin-right: var(--#{$prefix}spacing-xxs);
                  fill: var(--#{$prefix}header-brand-icon-color);
                }
              }
            }
          }

          .it-search-wrapper {
            display: flex;
            align-items: center;
            align-self: center;
            margin-left: 4rem;
            color: var(--#{$prefix}header-center-text-color);
            font-size: var(--#{$prefix}header-center-font-size);

            &.cloned-element {
              a {
                width: 35px;
                height: 35px;

                svg {
                  width: 20px;
                  height: 20px;
                }
              }
            }
          }

          .navbar-nav {
            flex: 1;

            // hide navbar-secondary if header is sticky
            &.navbar-secondary {
              display: none;
            }
          }
        }
      }
    }
  }
}

.it-nav-wrapper {
  position: relative;
  z-index: auto;

  .it-header-navbar-wrapper {
    position: absolute;
    top: 50%;
    left: 8px;
    z-index: 3;
    margin-top: -20px;
    transition: padding-top var(--#{$prefix}transition-instant) ease;
    @include media-breakpoint-up(lg) {
      position: inherit;
      top: inherit;
      left: auto;
      margin-top: 0;
      background: var(--#{$prefix}header-nav-background);
    }

    // Add border bottom on light theme
    &.theme-light,
    &.theme-light-desk {
     border-bottom: 1px solid var(--#{$prefix}header-slim-border-color);
    }
  }
}

